act: update parameter output